# api_tester

./: .gitignore  pyproject.toml
config/: .env.example
params/api/: example_query.json
params/llm/: example_prompt.txt
src/: main.py
src/api_tester/: __init__.py  params_loader.py  paths.py  settings.py
src/api_tester.egg-info/: PKG-INFO  SOURCES.txt
src/api_tester/handlers/: __init__.py  result.py
